created scheme for buy and side-nav section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 </head>
 <body>
     <main>
-        <div class="container">
-            
+        <div class="container clearfix">
+            <div class="main-middle float-right">
+                <div class="buy">
+
+                </div>
+            </div>
+            <div class="main-side float-left">
+                <div class="nav-section-left">
+
+                </div>
+            </div>
         </div>
     </main>
 </body>
