--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
                 <div class="buy">
 
                 </div>
+                <div class="content">
+
+                </div>   
             </div>
             <div class="main-side float-left">
                 <div class="nav-section-left">
+
+                </div>
+            </div>
+            <div class="bottom-player float-left">
+                <div class="player">
 
                 </div>
             </div>
