--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Spotify</title>
 </head>
@@ -13,15 +16,52 @@
         <div class="container clearfix">
             <div class="main-middle float-right">
                 <div class="buy">
-
+                    <div class="btn-pay flex">
+                        <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
+                    </div>
                 </div>
                 <div class="content">
 
                 </div>   
             </div>
             <div class="main-side float-left">
-                <div class="nav-section-left">
-
+                <div class="nav-section-left flex">
+                    <img id="logo" src="img/logo.svg" alt="">
+                    <div id="active-left" class="flex">
+                        <img class="side-menu-images" src="img/home.svg" alt=""><span id="color-white">Home</span>
+                    </div>
+                    <div class="flex">
+                        <img class="side-menu-images" src="img/search.svg" alt=""><span>Cerca</span>
+                    </div>
+                    <div class="flex">
+                        <img class="side-menu-images" src="img/libreria.svg" alt=""><span>La tua libreria</span>
+                    </div>
+                    <div class="playlist">
+                        <p>PLAYLIST</p>
+                        <div class="flex">
+                            <i class="fas fa-plus-square"></i><span>Crea Playlist</span>
+                        </div>
+                        <div class="playlist-list">
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                            <p>Nome Playlist</p>
+                        </div>
+                    </div>
+                    <div class="account">
+                        <div class="flex">
+                            <img src="img/download.svg" alt=""><span>Installa app</span>
+                        </div>
+                        <hr id="hr-user">
+                        <div class="flex">
+                            <img src="img/profile.svg" alt=""><span>John Doe</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="bottom-player float-left">
