side nav completed with few adjustments

--- a/index.html
+++ b/index.html
@@ -12,21 +12,14 @@
     <title>Spotify</title>
 </head>
 <body>
+    
     <main>
-        <div class="container clearfix">
-            <div class="main-middle float-right">
-                <div class="buy">
-                    <div class="btn-pay flex">
-                        <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
-                    </div>
-                </div>
-                <div class="content">
-
-                </div>   
-            </div>
-            <div class="main-side float-left">
-                <div class="nav-section-left flex">
+        <nav class="col-left">
+            <section class="nav-top">
+                <div class="nav-logo">
                     <img id="logo" src="img/logo.svg" alt="">
+                </div>
+                <div class="nav-menu">
                     <div id="active-left" class="flex">
                         <img class="side-menu-images" src="img/home.svg" alt=""><span id="color-white">Home</span>
                     </div>
@@ -36,40 +29,62 @@
                     <div class="flex">
                         <img class="side-menu-images" src="img/libreria.svg" alt=""><span>La tua libreria</span>
                     </div>
-                    <div class="playlist">
-                        <p>PLAYLIST</p>
-                        <div class="flex">
-                            <i class="fas fa-plus-square"></i><span>Crea Playlist</span>
-                        </div>
-                        <div class="playlist-list">
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                            <p>Nome Playlist</p>
-                        </div>
+                </div>
+                <div class="nav-playlist flex">
+                    <p>PLAYLIST</p>
+                    <div class="flex">
+                        <i class="fas fa-plus-square"></i><span>Crea Playlist</span>
                     </div>
-                    <div class="account">
-                        <div class="flex">
-                            <img src="img/download.svg" alt=""><span>Installa app</span>
-                        </div>
-                        <hr id="hr-user">
-                        <div class="flex">
-                            <img src="img/profile.svg" alt=""><span>John Doe</span>
-                        </div>
+                    <div class="playlist-list">
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
+                        <p>Nome Playlist</p>
                     </div>
                 </div>
-            </div>
-            <div class="bottom-player float-left">
-                <div class="player">
+            </section>
+            <section class="nav-bottom flex">
+                <div class="account">
+                    <div class="flex">
+                        <img src="img/download.svg" alt=""><span>Installa app</span>
+                    </div>
+                    <hr id="hr-user">
+                    <div class="flex">
+                        <img src="img/profile.svg" alt=""><span>John Doe</span>
+                    </div>
+                </div>
+            </section>
+        </nav>
 
+        <div class="col-right">
+            <div id="top-ad">
+                <div class="flex">
+                    <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+
+    </footer>  
 </body>
 </html>
