fixed overflow, added content in right section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,107 @@
                     <a href="#" class="btn">EFFETTUA L'UPGRADE</a>
                 </div>
             </div>
+            <div class="music-options flex">
+                <div class="option">
+                    <a href="#">IN EVIDENZA</a>
+                </div>
+                <div class="option">
+                    <a href="#">PODCAST</a>
+                </div>
+                <div class="option">
+                    <a href="#">CLASSIFICHE</a>
+                </div>
+                <div class="option">
+                    <a href="#">GENERI E MOOD</a>
+                </div>
+                <div class="option">
+                    <a href="#">NUOVE USCITE</a>
+                </div>
+                <div class="option">
+                    <a href="#">SCOPRI</a>
+                </div>
+            </div>
+            <div class="container-music">
+                <h2 id="title">Recently played</h2>
+                <div class="music flex">
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                </div>
+                <h2 id="title">Creato per John Doe</h2>
+                <div class="music flex">
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                </div>
+                <h2 id="title">Artisti più popolari</h2>
+                <div class="music flex">
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/metal_lifting.jpg" alt="">
+                        <div class="music-text">
+                            <h3>Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
