added side content footer

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="music-options flex">
                 <div class="option">
-                    <a href="#">IN EVIDENZA</a>
+                    <a id="active-option" href="#">IN EVIDENZA</a>
                 </div>
                 <div class="option">
                     <a href="#">PODCAST</a>
@@ -112,80 +112,102 @@
                         </div>
                     </div>
                     <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
+                        <img src="img/stranger.jpeg" alt="">
                         <div class="music-text">
-                            <h3>Heavy Metal</h3>
+                            <h3>Stranger Things, Vol.1 (a Netflix Original Serie Soundtrack)</h3>
+                            <p>Kyle Dixon & Micheal Stein</p>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img src="img/aquietplace.jpeg" alt="">
+                        <div class="music-text">
+                            <h3>A quiet place</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
                     <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
+                        <img src="img/split.jpeg" alt="">
                         <div class="music-text">
-                            <h3>Heavy Metal</h3>
+                            <h3>Split</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
                     <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
+                        <img src="img/cure.jpeg" alt="">
                         <div class="music-text">
-                            <h3>Heavy Metal</h3>
+                            <h3>A cure for wellness</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
                     <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
+                        <img src="img/sinister.jpeg" alt="">
                         <div class="music-text">
-                            <h3>Heavy Metal</h3>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                    <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
-                        <div class="music-text">
-                            <h3>Heavy Metal</h3>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                </div>
-                <h2 id="title">Creato per John Doe</h2>
-                <div class="music flex">
-                    <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
-                        <div class="music-text">
-                            <h3>Heavy Metal</h3>
-                            <p>Subtitle</p>
-                        </div>
-                    </div>
-                    <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
-                        <div class="music-text">
-                            <h3>Heavy Metal</h3>
+                            <h3>Sinister</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
                 </div>
-                <h2 id="title">Artisti più popolari</h2>
+                <h2 class="secondary-title">Creato per John Doe</h2>
+                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                 <div class="music flex">
                     <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
+                        <img src="img/radar.jpeg" alt="">
                         <div class="music-text">
-                            <h3>Heavy Metal</h3>
-                            <p>Subtitle</p>
+                            <h3>Release Radar</h3>
                         </div>
                     </div>
                     <div class="card flex">
-                        <img src="img/metal_lifting.jpg" alt="">
+                        <img src="img/mixdaily.jpeg" alt="">
                         <div class="music-text">
-                            <h3>Heavy Metal</h3>
-                            <p>Subtitle</p>
+                            <h3>Daily Mix 1</h3>
+                        </div>
+                    </div>
+                </div>
+                <h2 class="secondary-title">Artisti più popolari</h2>
+                <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div class="music flex">
+                    <div class="card flex">
+                        <img class="round-image" src="img/youg.jpeg" alt="">
+                        <div class="music-text">
+                            <h3>Lana del Rey</h3>
+                        </div>
+                    </div>
+                    <div class="card flex">
+                        <img class="round-image" src="img/einaudi.jpeg" alt="">
+                        <div class="music-text">
+                            <h3>Ludovico<br>
+                            Einaudi</h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="flex">
+        <div class="song-info flex">
+            <img src="img/sinister.jpeg" alt="">
+            <p><strong>Sinister</strong><br>
+            Brano Nome</p>
+            <div>
+                <i class="far fa-heart"></i>
+                <i class="far fa-folder"></i>
+            </div>
+            
+        </div>
+        <div class="player">
 
+        </div>
+        <div class="audio-settings flex">
+            <div class="icon-box">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-tv"></i>
+                <i class="fas fa-volume-up"></i>
+            </div>
+            <div>
+                <div id="audiobar"></div>
+
+            </div>
+        </div>
     </footer>  
 </body>
 </html>
