added media queries

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <section class="nav-top">
                 <div class="nav-logo">
                     <img id="logo" src="img/logo.svg" alt="">
+                    <img id="logo-small" src="img/logo-small.svg" alt="">
                 </div>
                 <div class="nav-menu">
-                    <div id="active-left" class="flex">
+                    <div class="active-left" class="flex">
                         <img class="side-menu-images" src="img/home.svg" alt=""><span id="color-white">Home</span>
                     </div>
                     <div class="flex">
@@ -36,16 +37,6 @@
                         <i class="fas fa-plus-square"></i><span>Crea Playlist</span>
                     </div>
                     <div class="playlist-list">
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
-                        <p>Nome Playlist</p>
                         <p>Nome Playlist</p>
                         <p>Nome Playlist</p>
                         <p>Nome Playlist</p>
@@ -188,9 +179,13 @@
             <div>
                 <img id="image" src="img/sinister.jpeg" alt="">
             </div>
-            <div><p>Sinister<br>Nome Brano</p></div>
-            <i class="far fa-heart"></i>
-            <i class="far fa-folder"></i>
+            <div>
+                <p>Sinister<br>Nome Brano</p>
+            </div>
+            <div class="flex" id="heart-folder">
+                <i class="far fa-heart"></i>
+                <i class="far fa-folder"></i>
+            </div>
         </div>
         <div class="player flex column"> 
             <div class="top-plater flex">
