--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
             <div class="player-bottom flex">
                 <div>0:25</div>
                 <div id="timeline">
-                    <div id="time"></div>
+                    <div id="time">
+                        <i class="fas fa-circle"></i>
+                    </div>
                 </div>
                 <div>4:35</div>
             </div>
@@ -208,7 +210,9 @@
             <div><i class="fas fa-tv"></i></div>
             <div><i class="fas fa-volume-up"></i></div>
             <div id="audiobar">
-                <div id="curret-audio"></div>
+                <div id="curret-audio">
+                    <i class="fas fa-circle"></i>
+                </div>
             </div>      
         </div>
     </footer>  
