--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <main>
         <nav class="col-left">
-            <section class="nav-top">
+            <section class="nav-top flex column">
                 <div class="nav-logo">
                     <img id="logo" src="img/logo.svg" alt="">
                     <img id="logo-small" src="img/logo-small.svg" alt="">
@@ -31,7 +31,7 @@
                         <img class="side-menu-images" src="img/libreria.svg" alt=""><span>La tua libreria</span>
                     </div>
                 </div>
-                <div class="nav-playlist flex">
+                <div class="nav-playlist flex column">
                     <p>PLAYLIST</p>
                     <div class="flex">
                         <i class="fas fa-plus-square"></i><span>Crea Playlist</span>
@@ -95,42 +95,42 @@
             <div class="container-music">
                 <h2 id="title">Recently played</h2>
                 <div class="music flex">
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/metal_lifting.jpg" alt="">
                         <div class="music-text">
                             <h3>Heavy Metal</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/stranger.jpeg" alt="">
                         <div class="music-text">
                             <h3>Stranger Things, Vol.1 (a Netflix Original Serie Soundtrack)</h3>
                             <p>Kyle Dixon & Micheal Stein</p>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/aquietplace.jpeg" alt="">
                         <div class="music-text">
                             <h3>A quiet place</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/split.jpeg" alt="">
                         <div class="music-text">
                             <h3>Split</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/cure.jpeg" alt="">
                         <div class="music-text">
                             <h3>A cure for wellness</h3>
                             <p>Subtitle</p>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/sinister.jpeg" alt="">
                         <div class="music-text">
                             <h3>Sinister</h3>
@@ -141,13 +141,13 @@
                 <h2 class="secondary-title">Creato per John Doe</h2>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                 <div class="music flex">
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/radar.jpeg" alt="">
                         <div class="music-text">
                             <h3>Release Radar</h3>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img src="img/mixdaily.jpeg" alt="">
                         <div class="music-text">
                             <h3>Daily Mix 1</h3>
@@ -157,13 +157,13 @@
                 <h2 class="secondary-title">Artisti più popolari</h2>
                 <p>Più ascolti, più accurati saranno i suggerimenti.</p>
                 <div class="music flex">
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img class="round-image" src="img/youg.jpeg" alt="">
                         <div class="music-text">
                             <h3>Lana del Rey</h3>
                         </div>
                     </div>
-                    <div class="card flex">
+                    <div class="card flex column">
                         <img class="round-image" src="img/einaudi.jpeg" alt="">
                         <div class="music-text">
                             <h3>Ludovico<br>
